--- a/Backoffice.RazorPages/Backoffice.RazorPages.csproj
+++ b/Backoffice.RazorPages/Backoffice.RazorPages.csproj
@@ -4,6 +4,7 @@
     <UserSecretsId>aspnet-Backoffice.RazorPages-BB76F8A8-4859-469C-967D-F7B558D53899</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" PrivateAssets="All" />
