adding database server url

--- a/Backoffice/appsettings.Development.json
+++ b/Backoffice/appsettings.Development.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
