--- a/Backoffice/appsettings.json
+++ b/Backoffice/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=dama.Identity;User Id=dama_user;Password=dama_user123;MultipleActiveResultSets=true",
+    "DamaConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=dama;User Id=dama_user;Password=dama_user123;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
