--- a/src/DamaSalesApp/DamaSales/DamaSales.csproj
+++ b/src/DamaSalesApp/DamaSales/DamaSales.csproj
@@ -49,6 +49,7 @@
       <DependentUpon>Orders.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CategoryViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
