--- a/src/DamaSalesApp/DamaSales/DamaSales.csproj
+++ b/src/DamaSalesApp/DamaSales/DamaSales.csproj
@@ -43,6 +43,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\ProductType.cs" />
+    <Compile Include="Models\ScreenModeType.cs" />
     <Compile Include="Pages\Sales.xaml.cs">
       <DependentUpon>Sales.xaml</DependentUpon>
     </Compile>
@@ -51,6 +53,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\ViewType.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
