create command (wip)

--- a/src/DamaSalesApp/DamaSalesApp.UWP/project.json
+++ b/src/DamaSalesApp/DamaSalesApp.UWP/project.json
@@ -1,6 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "SQLitePCL": "3.8.7.2",
+    "SQLitePCLRaw.bundle_green": "1.1.9",
     "Xamarin.Forms": "2.5.0.91635"
   },
   "frameworks": {
