--- a/src/Backoffice/appsettings.Development.json
+++ b/src/Backoffice/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=Dama;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
