--- a/src/Backoffice/appsettings.json
+++ b/src/Backoffice/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=dama.Identity;User Id=dama_user;Password=dama_user123;MultipleActiveResultSets=true",
-    "DamaConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=dama;User Id=dama_user;Password=dama_user123;MultipleActiveResultSets=true"
+    "DamaConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb;User Id=dama_admin;Password=dama#admin!2018",
+    "IdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb.Identity;User Id=dama_admin;Password=dama#admin!2018"
   },
   "Logging": {
     "IncludeScopes": false,
