add shop config in backoffice

--- a/src/Backoffice/appsettings.Development.json
+++ b/src/Backoffice/appsettings.Development.json
@@ -3,6 +3,8 @@
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "WebNewsPictureUri": "http://localhost:54855/images/news/",
+  "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\news\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
