fix shopconfig saving file method

--- a/src/Backoffice/appsettings.json
+++ b/src/Backoffice/appsettings.json
@@ -3,6 +3,8 @@
     "DamaConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb;User Id=dama_admin;Password=dama#admin!2018",
     "IdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb.Identity;User Id=dama_admin;Password=dama#admin!2018"
   },
+  "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
+  "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
