--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>DamaShopWeb.Web</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
