changes in main and footer

--- a/src/Backoffice/appsettings.Development.json
+++ b/src/Backoffice/appsettings.Development.json
@@ -5,6 +5,8 @@
   },
   "WebNewsPictureUri": "http://localhost:54855/images/news/",
   "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\news\\",
+  "WebProductsPictureUri": "http://localhost:54855/images/products/",
+  "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\products\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
