--- a/src/Backoffice/appsettings.json
+++ b/src/Backoffice/appsettings.json
@@ -5,6 +5,8 @@
   },
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
+  "WebProductsPictureUri": "https://www.damanojornal.com/loja/images/products/",
+  "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
