Create upload image to catalog type

--- a/src/Backoffice/appsettings.Development.json
+++ b/src/Backoffice/appsettings.Development.json
@@ -7,6 +7,8 @@
   "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:54855/images/products/",
   "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\products\\",
+  "WebProductTypesPictureUri": "http://localhost:54855/images/producttypes/",
+  "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\producttypes\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
