--- a/src/Backoffice/appsettings.json
+++ b/src/Backoffice/appsettings.json
@@ -7,6 +7,8 @@
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
   "WebProductsPictureUri": "https://www.damanojornal.com/loja/images/products/",
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
+  "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
+  "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
