--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -9,5 +9,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "SmtpServer": "smtp.damanojornal.com",
+  "SmtpPort": 25,
+  "SmtpUsername": "info@damanojornal.com",
+  "SmtpPassword": "DamaMail2018!",
+  "FromEmail": "info@damanojornal.com",
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
 }
