--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -10,10 +10,11 @@
       "Default": "Warning"
     }
   },
-  "SmtpServer": "smtp.damanojornal.com",
-  "SmtpPort": 25,
+  "SmtpServer": "smtp-pt.securemail.pro",
+  "SmtpPort": 465,
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
+  "SSL": true
 }
