--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -11,5 +11,12 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "SmtpServer": "smtp.damanojornal.com",
+  "SmtpPort": 25,
+  "SmtpUsername": "info@damanojornal.com",
+  "SmtpPassword": "DamaMail2018!",
+  "FromEmail": "info@damanojornal.com",
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
+  "SSL": false
 }
