save images changes

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -10,11 +10,14 @@
       "Default": "Warning"
     }
   },
-  "SmtpServer": "smtp-pt.securemail.pro",
-  "SmtpPort": 465,
+  //"SmtpServer": "smtp-pt.securemail.pro",
+  //"SmtpPort": 465,
+  //"SSL": true,
+  "SmtpServer": "smtp.damanojornal.com",
+  "SmtpPort": 25,
+  "SSL": false,
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
-  "SSL": true
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
 }
