--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -14,9 +14,9 @@
   },
   "SmtpServer": "smtp.damanojornal.com",
   "SmtpPort": 25,
+  "SSL": false,
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
-  "SSL": false
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
 }
