--- a/src/Backoffice/appsettings.Development.json
+++ b/src/Backoffice/appsettings.Development.json
@@ -4,11 +4,11 @@
     "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "WebNewsPictureUri": "http://localhost:54855/images/news/",
-  "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\news\\",
+  "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:54855/images/products/",
-  "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\products\\",
+  "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\products\\",
   "WebProductTypesPictureUri": "http://localhost:54855/images/producttypes/",
-  "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\Adama\\src\\Web\\wwwroot\\images\\producttypes\\",
+  "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\producttypes\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
