Backoffice role Management Created

--- a/src/Backoffice/appsettings.json
+++ b/src/Backoffice/appsettings.json
@@ -9,6 +9,16 @@
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
   "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
   "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
+  //"SmtpServer": "smtp-pt.securemail.pro",
+  //"SmtpPort": 465,
+  //"SSL": true,
+  "SmtpServer": "smtp.damanojornal.com",
+  "SmtpPort": 25,
+  "SSL": false,
+  "SmtpUsername": "info@damanojornal.com",
+  "SmtpPassword": "DamaMail2018!",
+  "FromEmail": "info@damanojornal.com",
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
