--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
@@ -11,14 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.10" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
-    <PackageReference Include="Acr.UserDialogs" Version="6.5.1" />
-    <PackageReference Include="SlideOverKit" Version="2.1.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
+    <PackageReference Include="SlideOverKit" Version="2.1.6.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="PCLCrypto" Version="2.0.147" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.4" />
-    <PackageReference Include="IdentityModel" Version="3.0.0" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.6" />
+    <PackageReference Include="IdentityModel" Version="3.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\Permissions\" />
