Catalog Filter in Dama App 1version

--- a/src/Services/Dama.API/appsettings.json
+++ b/src/Services/Dama.API/appsettings.json
@@ -4,16 +4,11 @@
   },
   "IdentityUrl": "http://localhost:5000",
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Information"
-      }
+    
+    "LogLevel": {
+      "Default": "Warning"
     }
-  }
+  
+  },
+  "AllowedHosts": "*"
 }
