Use userId instead email when getting basket of user

--- a/src/Services/Dama.API/appsettings.json
+++ b/src/Services/Dama.API/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;"
+    "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
+    "DamaIdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
   },
   "IdentityUrl": "http://localhost:5000",
   "Logging": {
