Create simple Profile View

--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
@@ -26,6 +26,14 @@
     <Folder Include="Models\Permissions\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="Views\ProfileView.xaml.cs">
+      <DependentUpon>ProfileView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\OrdersView.xaml.cs">
+      <DependentUpon>OrdersView.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Update="Views\CatalogFilterView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
