change port to 5858

--- a/src/Services/Dama.API/appsettings.Development.json
+++ b/src/Services/Dama.API/appsettings.Development.json
@@ -1,5 +1,9 @@
 ﻿{
-  "Logging": {    
+  "ConnectionStrings": {
+    "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
+    "DamaIdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
+  },
+  "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
