--- a/src/Services/Dama.API/appsettings.json
+++ b/src/Services/Dama.API/appsettings.json
@@ -1,9 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
-    "DamaIdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
+    "DamaShopConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb;User Id=dama_admin;Password=dama#admin!2018",
+    "DamaIdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb.Identity;User Id=dama_admin;Password=dama#admin!2018"
   },
-  "IdentityUrl": "http://localhost:5000",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
