remove https for now :(

--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -18,5 +18,6 @@
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
+  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
+  "AllowedHosts": "*"
 }
