--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -3,7 +3,7 @@
     "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
     "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
   },
-  "CatalogBaseUrl": "https://localhost:44372/images/",
+  "CatalogBaseUrl": "http://localhost:5500/images/",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
