--- a/src/Libraries/Infrastructure/Infrastructure.csproj
+++ b/src/Libraries/Infrastructure/Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" PrivateAssets="All" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.0" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.5.0" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.0" />
