--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -19,6 +19,13 @@
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
   "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
+  "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
+  "SageApiBaseUrl": "https://api.sageone.com",
+  "ClientId": "3d4d1c18be8c85837d72",
+  "ClientSecret": "2b267ffcb846289eff351f405a04c4196010bffb",
+  "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
+  "CallbackURL": "http://localhost:5000/Sage/Callback",
+  "AccessTokenURL": "https://api.sageone.com/oauth2/token",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
