Integração com Fatura (WIP)

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -3,12 +3,12 @@
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "WebNewsPictureUri": "http://localhost:54855/images/news/",
-  "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\news\\",
-  "WebProductsPictureUri": "http://localhost:54855/images/products/",
-  "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\products\\",
-  "WebProductTypesPictureUri": "http://localhost:54855/images/producttypes/",
-  "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\wwwroot\\images\\producttypes\\",
+  "WebNewsPictureUri": "http://localhost:5500/images/news/",
+  "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\news\\",
+  "WebProductsPictureUri": "http://localhost:5500/images/products/",
+  "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\",
+  "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
+  "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
