Download and Save Invoice in PDF

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -9,6 +9,7 @@
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
   "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
   "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
+  "InvoicesFolderFullPath": "/var/aspnetcore/damabackoffice/wwwroot/invoices/",
   //"SmtpServer": "smtp-pt.securemail.pro",
   //"SmtpPort": 465,
   //"SSL": true,
