Remove invoices folder from git

--- a/.gitignore
+++ b/.gitignore
@@ -292,3 +292,4 @@ src/Web/DamaWeb/wwwroot/images/news/
 src/Web/DamaWeb/wwwroot/images/products/
 src/Web/DamaWeb/wwwroot/images/producttypes/
 .vscode/
+invoices/
