--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -9,7 +9,7 @@
   "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
   "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\",
-  "InvoicesFolderFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\Backoffice\\wwwroot\\invoices\\",
+  "InvoicesFolderFullPath": "C:\\projects\\nsfw\\adama\\invoices\\",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
