small fixes and email changes

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -18,7 +18,8 @@
   "SSL": false,
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
-  "FromEmail": "info@damanojornal.com",
+  "FromInfoEmail": "info@damanojornal.com",
+  "FromOrderEmail": "encomendas@damanojornal.com",
   "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
   "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
   "SageApiBaseUrl": "https://api.sageone.com",
