--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -17,7 +17,8 @@
   "SSL": false,
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
-  "FromEmail": "info@damanojornal.com",
+  "FromInfoEmail": "info@damanojornal.com",
+  "FromOrderEmail": "encomendas@damanojornal.com",
   "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
   "AllowedHosts": "*"
 }
