--- a/src/Web/DamaWeb/DamaWeb.csproj
+++ b/src/Web/DamaWeb/DamaWeb.csproj
@@ -17,4 +17,12 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Pages\Customize\Step3.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Pages\Customize\Step2.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
 </Project>
