catalog price fix

--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Windows/DamaNoJornal.Windows.csproj
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Windows/DamaNoJornal.Windows.csproj
@@ -24,9 +24,10 @@
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>E8F42B88DBCCF450DB1C3C88FBA68E793DA00FD7</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>651BA4AE516049B9679920CD84BC814A364F8AA0</PackageCertificateThumbprint>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
