--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -17,5 +17,5 @@
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
+  "ToEmails": "joaofbbg@gmail.com"
 }
