add application insights

--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -17,5 +17,8 @@
   "SmtpUsername": "info@damanojornal.com",
   "SmtpPassword": "DamaMail2018!",
   "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com"
+  "ToEmails": "joaofbbg@gmail.com",
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  }
 }
