Send confirmation email without invoice

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -10,6 +10,7 @@
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
   "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\",
   "InvoicesFolderFullPath": "C:\\projects\\nsfw\\adama\\invoices\\",
+  "ToEmails": "joaofbbg@gmail.com",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
