--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -20,5 +20,15 @@
   "ToEmails": "joaofbbg@gmail.com",
   "ApplicationInsights": {
     "InstrumentationKey": ""
+  },
+  "Authentication": {
+    "Facebook": {
+      "AppId": "",
+      "AppSecret": ""
+    },
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
   }
 }
