fix social login

--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -23,5 +23,15 @@
   "MailChimpBaseUrl": "https://us18.api.mailchimp.com/3.0",
   "ApplicationInsights": {
     "InstrumentationKey": "71664e2f-7785-4b06-ad94-a1715c80c06c"
+  },
+  "Authentication": {
+    "Facebook": {
+      "AppId": "",
+      "AppSecret": ""
+    },
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
   }
 }
