--- a/src/Web/DamaWeb/DamaWeb.csproj
+++ b/src/Web/DamaWeb/DamaWeb.csproj
@@ -35,4 +35,5 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1Development_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
