--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -24,14 +24,14 @@
   "ApplicationInsights": {
     "InstrumentationKey": "71664e2f-7785-4b06-ad94-a1715c80c06c"
   },
-  "Authentication": {
+   "Authentication": {
     "Facebook": {
-      "AppId": "",
-      "AppSecret": ""
+      "AppId": "198821157453249",
+      "AppSecret": "6fda7445bb7f5f9395cf8fc019e6aa41"
     },
     "Google": {
-      "ClientId": "",
-      "ClientSecret": ""
+      "ClientId": "562749217980-5qnk8tvg81qubi8oarv2oghs1bldq8nk.apps.googleusercontent.com",
+      "ClientSecret": "sjNvCOZGG_nrjjIhYASkBewe"
     }
   }
 }
