test social in backoffice

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -28,6 +28,16 @@
   "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
   "CallbackURL": "http://localhost:5000/Sage/Callback",
   "AccessTokenURL": "https://api.sageone.com/oauth2/token",
+  "Authentication": {
+    "Facebook": {
+      "AppId": "198821157453249",
+      "AppSecret": "6fda7445bb7f5f9395cf8fc019e6aa41"
+    },
+    "Google": {
+      "ClientId": "562749217980-5qnk8tvg81qubi8oarv2oghs1bldq8nk.apps.googleusercontent.com",
+      "ClientSecret": "sjNvCOZGG_nrjjIhYASkBewe"
+    }
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
