--- a/src/Libraries/Infrastructure/Infrastructure.csproj
+++ b/src/Libraries/Infrastructure/Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" PrivateAssets="All" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.1" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.1" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.5.1" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.1" />
