--- a/src/Libraries/Infrastructure/Infrastructure.csproj
+++ b/src/Libraries/Infrastructure/Infrastructure.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Identity\Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
