--- a/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
+++ b/src/Mobile/DamaNoJornal/DamaNoJornal.Core/DamaNoJornal.Core.csproj
@@ -26,6 +26,12 @@
     <Folder Include="Models\Permissions\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="Views\EventView.xaml.cs">
+      <DependentUpon>EventView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\EventDetailView.xaml.cs">
+      <DependentUpon>EventDetailView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\ProfileView.xaml.cs">
       <DependentUpon>ProfileView.xaml</DependentUpon>
     </Compile>
