change mysql user

--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     //"DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
     //"IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
-    "DamaShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_damashopweb;Uid=jsadmin;Pwd=jscompany#2018!",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsadmin;Pwd=jscompany#2018!"
+    "DamaShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018"
   },
   "CatalogBaseUrl": "http://localhost:5500/images/",
   "Logging": {
