--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -3,7 +3,8 @@
     //"IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb.Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=DamaShopWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
     "DamaConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018"
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018",
+    "GroceryConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_grocery;Uid=jsadmin;Pwd=jscompany#2017!"
   },
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
   "WebNewsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\news\\",
