--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -38,6 +38,13 @@
       "ClientSecret": "sjNvCOZGG_nrjjIhYASkBewe"
     }
   },
+  "Tenants": {
+    "default": "damanojornal",
+    "tenants": {
+      "damanojornal.com": "damanojornal",
+      "saborcomtradicao.com": "saborcomtradicao"
+    }
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
