add grocery products (WIP)

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -12,6 +12,8 @@
   "WebProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
   "WebProductTypesPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\",
+  "GroceryProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\Backoffice\\wwwroot\\images\\products\\",
+  "GroceryProductsPictureUri": "http://localhost:5000/images/products/",
   "InvoicesFolderFullPath": "C:\\projects\\nsfw\\adama\\invoices\\",
   "ToEmails": "joaofbbg@gmail.com",
   "Logging": {
