--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb;User Id=dama_admin;Password=dama#admin!2018",
-    "IdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb.Identity;User Id=dama_admin;Password=dama#admin!2018"
+    "DamaConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_damashopweb;Uid=jsadmin;Pwd=jscompany#2018!",
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_identity;Uid=jsadmin;Pwd=jscompany#2018!",
+    "GroceryConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_grocery;Uid=jsadmin;Pwd=jscompany#2018!"
   },
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
