change dama api to mysql

--- a/src/Services/Dama.API/appsettings.Development.json
+++ b/src/Services/Dama.API/appsettings.Development.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb;",
-    "DamaIdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Integrated Security=true;Initial Catalog=DamaShopWeb.Identity;"
+    "DamaConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018",
+    "GroceryConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_grocery;Uid=jsdamauser;Pwd=dama#user!2018"
   },
   "Logging": {
     "LogLevel": {
