--- a/src/Services/Dama.API/appsettings.json
+++ b/src/Services/Dama.API/appsettings.json
@@ -1,7 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb;User Id=dama_admin;Password=dama#admin!2018",
-    "DamaIdentityConnection": "Server=jscompany.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Initial Catalog=DamaShopWeb.Identity;User Id=dama_admin;Password=dama#admin!2018"
+    "DamaConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_identity;Uid=jsdamauser;Pwd=dama#user!2018",
+    "GroceryConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_grocery;Uid=jsdamauser;Pwd=dama#user!2018"
   },
   "Logging": {
     "LogLevel": {
