fix upload images backoffice grocery

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -10,6 +10,8 @@
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
   "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
   "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
+  "GroceryProductsPictureFullPath": "/var/aspnetcore/damabackoffice/wwwroot/images/products/",
+  "GroceryProductsPictureUri": "https://backoffice.damanojornal.com/images/products/",
   "InvoicesFolderFullPath": "/var/aspnetcore/damabackoffice/invoices/",
   //"SmtpServer": "smtp-pt.securemail.pro",
   //"SmtpPort": 465,
